--- a/themes/cate-theme.css
+++ b/themes/cate-theme.css
@@ -1,11 +1,189 @@
 /* @theme cate-theme */
 @import "default";
+@font-face {
+  font-family: "Nunito Sans";
+  src: url(fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf);
+  font-weight: 200;
+}
+:root {
+  color: #444;
+  font-family: "Nunito Sans";
+  font-weight: 200;
+}
+
+section {
+  --color-fg-default: #444;
+  --h1-color: #009bea;
+  --header-footer-color: #686868;
+  --heading-strong-color: #444;
+  --paginate-color: #686868;
+}
+
+h1, h2, h3, h4, h5, p {
+  font-weight: 200;
+  animation: fade-in 0.5s forwards;
+}
+
+h2, h3 {
+  color: #009bea;
+}
+
 h1 {
-  display: inline;
-  color: red;
-  display: inline;
-  background: orange;
-  box-shadow: 10px 0 0 orange, -10px 0 0 orange;
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.6rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+h1 strong {
+  background-color: #009bea;
+  color: #ffffff;
+  line-height: 3.2rem;
+  padding: 0.2rem;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+}
+
+h2 strong {
+  background-color: #f5f5f5;
+  color: #444;
+  line-height: 2.65rem;
+  padding: 0.2rem;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+footer {
+  left: 30px;
+  right: 30px;
+  bottom: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+footer::before {
+  content: url(img/logo.png);
+  min-height: 25px;
+  min-width: 25px;
+  zoom: 0.5;
+}
+
+section::after {
+  top: 21px;
+  left: auto;
+  right: 30px;
+}
+
+li:not([data-bespoke-marp-current-fragment=current]) {
+  opacity: 0.4;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+section.title-01 h1, section.title-01 h2, section.title-01--white-text h1, section.title-01--white-text h2,
+section.title-02 h1,
+section.title-02 h2,
+section.title-02--white-text h1,
+section.title-02--white-text h2 {
+  margin-left: -80px;
+}
+section.title-01 h1 strong, section.title-01 h2 strong, section.title-01--white-text h1 strong, section.title-01--white-text h2 strong,
+section.title-02 h1 strong,
+section.title-02 h2 strong,
+section.title-02--white-text h1 strong,
+section.title-02--white-text h2 strong {
+  padding-left: 40px;
+}
+
+section.title-01 h1 + h2, section.title-01--white-text h1 + h2,
+section.title-02 h1 + h2,
+section.title-02--white-text h1 + h2,
+section.chapter-01 h1 + h2,
+section.chapter-01--white-text h1 + h2 {
+  margin-top: -30px;
+}
+section.title-01 h2 + h1, section.title-01--white-text h2 + h1,
+section.title-02 h2 + h1,
+section.title-02--white-text h2 + h1,
+section.chapter-01 h2 + h1,
+section.chapter-01--white-text h2 + h1 {
+  margin-top: -30px;
+}
+
+section.chapter-01 footer::before,
+section.title-01 footer::before {
+  content: url(img/logo-invert.png);
+}
+section.chapter-01 p h2,
+section.chapter-01 h3,
+section.title-01 p h2,
+section.title-01 h3 {
+  color: #ffffff;
+}
+section.chapter-01 h1 strong,
+section.title-01 h1 strong {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+section.chapter-01 h2 strong,
+section.title-01 h2 strong {
+  background-color: rgba(68, 68, 68, 0.1);
+  color: #ffffff;
+}
+section.chapter-01 h3 strong,
+section.title-01 h3 strong {
+  color: #ffffff;
+}
+section.chapter-01,
+section.title-01 {
+  --h1-color: #ffffff;
+  --header-footer-color: #ffffff;
+  --heading-strong-color: #ffffff;
+  --paginate-color: #ffffff;
+}
+
+section.title-02--white-text footer::before {
+  content: url(img/logo-invert.png);
+}
+section.title-02--white-text {
+  --h1-color: #ffffff;
+  --header-footer-color: #ffffff;
+  --heading-strong-color: #ffffff;
+  --paginate-color: #ffffff;
+}
+
+section.title-01 {
+  background-image: url(img/title-020_bg.png);
+  background-size: cover;
+}
+
+section.chapter-01 {
+  background-image: url(img/chapter-010_bg.png);
+  background-size: cover;
+}
+section.chapter-01 h1, section.chapter-01 h2, section.chapter-01 h3 {
+  text-align: center;
+}
+section.chapter-01 h2 strong {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=cate-theme.css.map */
