--- a/themes/cate-theme.css
+++ b/themes/cate-theme.css
@@ -96,6 +96,13 @@ li:not([data-bespoke-marp-current-fragment=current]) > ul > li[data-bespoke-marp
   color: #444;
 }
 
+section.invert-bg li:not([data-bespoke-marp-current-fragment=current]) {
+  color: rgba(255, 255, 255, 0.4);
+}
+section.invert-bg li:not([data-bespoke-marp-current-fragment=current]) > ul > li[data-bespoke-marp-current-fragment=current] {
+  color: #ffffff;
+}
+
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -140,7 +147,8 @@ section.chapter-02--white-text h2 + h1 {
 
 section.chapter-01 footer::before,
 section.chapter-02 footer::before,
-section.title-01 footer::before {
+section.title-01 footer::before,
+section.invert-bg footer::before {
   background-image: url(img/logo-invert.png);
 }
 section.chapter-01 p h2,
@@ -148,38 +156,44 @@ section.chapter-01 h3,
 section.chapter-02 p h2,
 section.chapter-02 h3,
 section.title-01 p h2,
-section.title-01 h3 {
+section.title-01 h3,
+section.invert-bg p h2,
+section.invert-bg h3 {
   color: #ffffff;
 }
 section.chapter-01 h1 strong,
 section.chapter-02 h1 strong,
-section.title-01 h1 strong {
+section.title-01 h1 strong,
+section.invert-bg h1 strong {
   background-color: rgba(255, 255, 255, 0.2);
 }
 section.chapter-01 h2 strong,
 section.chapter-02 h2 strong,
-section.title-01 h2 strong {
+section.title-01 h2 strong,
+section.invert-bg h2 strong {
   background-color: rgba(68, 68, 68, 0.1);
   color: #ffffff;
 }
 section.chapter-01 h3 strong,
 section.chapter-02 h3 strong,
-section.title-01 h3 strong {
+section.title-01 h3 strong,
+section.invert-bg h3 strong {
   color: #ffffff;
 }
 section.chapter-01,
 section.chapter-02,
-section.title-01 {
+section.title-01,
+section.invert-bg {
   --h1-color: #ffffff;
   --header-footer-color: #ffffff;
   --heading-strong-color: #ffffff;
   --paginate-color: #ffffff;
 }
 
-section.title-02--white-text footer::before {
+section.title-02--invert-footer footer::before {
   background-image: url(img/logo-invert.png);
 }
-section.title-02--white-text {
+section.title-02--invert-footer {
   --h1-color: #ffffff;
   --header-footer-color: #ffffff;
   --heading-strong-color: #ffffff;
@@ -213,6 +227,10 @@ section.chapter-01 h2 strong,
 section.chapter-02 h2 strong {
   background-color: rgba(255, 255, 255, 0.2);
   color: #ffffff;
+}
+
+section.invert-bg {
+  --color-canvas-default: #444;
 }
 
 marp-pre {
