--- a/themes/cate-theme.css
+++ b/themes/cate-theme.css
@@ -109,8 +109,7 @@ section.invert-bg li:not([data-bespoke-marp-current-fragment=current]) {
 section.invert-bg li:not([data-bespoke-marp-current-fragment=current]) > ul > li[data-bespoke-marp-current-fragment=current] {
   color: #ffffff;
 }
-
-.code-line section.invert-bg li {
+section.invert-bg .code-line li {
   color: #ffffff !important;
 }
 
@@ -122,37 +121,33 @@ section.invert-bg li:not([data-bespoke-marp-current-fragment=current]) > ul > li
     opacity: 1;
   }
 }
-section.title-01 h1, section.title-01 h2, section.title-01--white-text h1, section.title-01--white-text h2,
+section.title-01 h1, section.title-01 h2,
 section.title-02 h1,
 section.title-02 h2,
-section.title-02--white-text h1,
-section.title-02--white-text h2 {
+section.title-02--invert-footer h1,
+section.title-02--invert-footer h2 {
   margin-left: -80px;
 }
-section.title-01 h1 strong, section.title-01 h2 strong, section.title-01--white-text h1 strong, section.title-01--white-text h2 strong,
+section.title-01 h1 strong, section.title-01 h2 strong,
 section.title-02 h1 strong,
 section.title-02 h2 strong,
-section.title-02--white-text h1 strong,
-section.title-02--white-text h2 strong {
+section.title-02--invert-footer h1 strong,
+section.title-02--invert-footer h2 strong {
   padding-left: 40px;
 }
 
-section.title-01 h1 + h2, section.title-01--white-text h1 + h2,
+section.title-01 h1 + h2,
 section.title-02 h1 + h2,
-section.title-02--white-text h1 + h2,
+section.title-02--invert-footer h1 + h2,
 section.chapter-01 h1 + h2,
-section.chapter-01--white-text h1 + h2,
-section.chapter-02 h1 + h2,
-section.chapter-02--white-text h1 + h2 {
+section.chapter-02 h1 + h2 {
   margin-top: -30px;
 }
-section.title-01 h2 + h1, section.title-01--white-text h2 + h1,
+section.title-01 h2 + h1,
 section.title-02 h2 + h1,
-section.title-02--white-text h2 + h1,
+section.title-02--invert-footer h2 + h1,
 section.chapter-01 h2 + h1,
-section.chapter-01--white-text h2 + h1,
-section.chapter-02 h2 + h1,
-section.chapter-02--white-text h2 + h1 {
+section.chapter-02 h2 + h1 {
   margin-top: -30px;
 }
 
