--- a/themes/cate-theme.scss
+++ b/themes/cate-theme.scss
@@ -137,10 +137,11 @@ section::after {
         li:not([data-bespoke-marp-current-fragment="current"]) > ul > li[data-bespoke-marp-current-fragment="current"] {
             color: $cat-text-color-invert;
         }
+        .code-line li {
+            color: $cat-text-color-invert !important;
+        }
     }
-    .code-line section.invert-bg li {
-        color: $cat-text-color-invert !important;
-    } 
+    
 }
 
 // animation templates
@@ -155,19 +156,17 @@ section::after {
 }
 
 //
-// SLIDES WITH NO MARGIN HEADLINES
+// SLIDES WITH NO LEFT MARGIN HEADLINES
 //
 
 section.title-01,
-section.title-02 {
-    &,
-    &--white-text {
-        h1, h2 {
-            margin-left: -80px;
-        }
-        h1 strong, h2 strong {
-            padding-left: 40px;
-        }
+section.title-02,
+section.title-02--invert-footer {
+    h1, h2 {
+        margin-left: -80px;
+    }
+    h1 strong, h2 strong {
+        padding-left: 40px;
     }
 }
 
@@ -177,18 +176,17 @@ section.title-02 {
 
 section.title-01,
 section.title-02,
+section.title-02--invert-footer,
 section.chapter-01,
 section.chapter-02 {
-    &,
-    &--white-text {
-        h1 + h2 {
-            margin-top: -30px;
-        }
-        h2 + h1 {
-            margin-top: -30px;
-        }
+    h1 + h2 {
+        margin-top: -30px;
+    }
+    h2 + h1 {
+        margin-top: -30px;
     }
 }
+
 
 //
 // SLIDES WITH INVERTED COLOR
