--- a/themes/cat-theme-dark.css
+++ b/themes/cat-theme-dark.css
@@ -41,7 +41,7 @@ h3 {
   font-size: 1.2rem;
 }
 
-h1 strong, h2 strong {
+h1 strong {
   background-color: #009bea;
   color: #ffffff;
   line-height: 3.2rem;
@@ -54,6 +54,9 @@ h2 strong {
   background-color: #f5f5f5;
   color: #444;
   line-height: 2.65rem;
+  padding: 0.2rem;
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
 }
 
 header {
@@ -132,7 +135,7 @@ section.title h3 {
 section.chapter h1 strong,
 section.title h1 strong {
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(94, 94, 94, 0.2);
   padding-inline: 20px;
 }
 section.chapter h2 strong,
@@ -174,18 +177,24 @@ section.title {
   background-size: cover;
 }
 
-section.chapter {
+section.chapter,
+section.textbox {
   background-image: url(img/chapter-bg-dark.png);
   background-size: cover;
 }
+
 section.chapter h1, section.chapter h2, section.chapter h3 {
   text-align: center;
 }
 section.chapter h2 strong {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(94, 94, 94, 0.2);
   border-radius: 5px;
   color: #ffffff;
   padding-inline: 20px;
+}
+
+section.textbox figure {
+  opacity: 0.1 !important;
 }
 
 /*# sourceMappingURL=cat-theme-dark.css.map */
