--- a/themes/cat-theme-dark.scss
+++ b/themes/cat-theme-dark.scss
@@ -16,15 +16,16 @@ $cat-color-3: #89d37e;
 $cat-color-4: #ce1970;
 $cat-color-5: #faae1d;
 $cat-color-6: #4a154b;
-$cat-darkgray: #444;
+$cat-darkgray: #5e5e5e;
 $cat-midgray: #686868;
 $cat-lightgray: #f5f5f5;
-$cat-bg-color: #5e5e5e;
+$cat-bg-color: #ffffff;
 $cat-bg-color-1: #f4f4f4;
 $cat-bg-color-2: $cat-color-2;
 $cat-bg-dark-blue: #1A1D2D;
-$cat-text-color: $cat-darkgray;
+$cat-text-color: #ffffff;
 $cat-text-color-invert: #ffffff;
+$cat-text-color-lightgray: #bbbbbb;
 
 :root {
     color: $cat-text-color;
@@ -33,11 +34,12 @@ $cat-text-color-invert: #ffffff;
 }
 
 section {
+    --bgColor-default: #{$cat-darkgray};
     --color-fg-default: #{$cat-text-color};
     // --color-fg-muted: #57606a;
     // --color-fg-subtle: #6e7781
     --h1-color: #{$cat-color-1};
-    --header-footer-color: #{$cat-midgray};
+    --header-footer-color: #{$cat-text-color-lightgray};
     --heading-strong-color: #{$cat-text-color};
     --paginate-color: #{$cat-midgray};
 }
@@ -47,27 +49,36 @@ h1, h2, h3, h4, h5, p {
     animation: fade-in .5s forwards;
 }
 
-h2, h3 { color: $cat-color-1; }
 h1 { font-size: 2rem; }
 h2 { font-size: 1.6rem; }
 h3 { font-size: 1.2rem; }
 
+h1, h2, h3 {
+    strong {
+        background-color: rgba($cat-bg-color, .2);
+        border-radius: 5px;
+        color: $cat-text-color-invert;
+        padding-inline: 20px;
+        box-decoration-break: clone;
+        -webkit-box-decoration-break: clone;
+    }
+}
+
 h1 strong {
-    background-color: $cat-color-1;
-    color: $cat-text-color-invert;
     line-height: 3.2rem;
-    padding: 0.2rem;
-    box-decoration-break: clone;
-    -webkit-box-decoration-break: clone;
 }
 
 h2 strong {
-    background-color: $cat-lightgray;
-    color: $cat-text-color;
     line-height: 2.65rem;
-    padding: 0.2rem;
-    box-decoration-break: clone;
-    -webkit-box-decoration-break: clone;
+}
+
+h3 strong,
+section.chapter h2 strong {
+    background-color: $cat-color-1;
+}
+
+section.chapter h3 strong {
+    background-color: rgba($cat-bg-color, .2);
 }
 
 header {
@@ -77,6 +88,7 @@ header {
 }
 
 footer {
+    color: transparent; // no text
     left: 30px;
     right: 30px;
     bottom: 21px;
@@ -90,6 +102,7 @@ footer::before {
     background-image: url(img/cat-logo-typo-text-weiss.svg);
     background-size: contain;
     background-repeat: no-repeat;
+    opacity: .5;
     width: math.div(list.nth($logo-size, 1), 2);
     height: math.div(list.nth($logo-size, 2), 2);
 }
@@ -125,8 +138,7 @@ section::after {
 // SLIDES WITH NO MARGIN HEADLINES
 //
 
-section.title,
-section.title-02 {
+section.title {
     &,
     &--white-text {
         h1, h2 {
@@ -140,7 +152,6 @@ section.title-02 {
 //
 
 section.title,
-section.title-02,
 section.chapter {
     &,
     &--white-text {
@@ -152,70 +163,6 @@ section.chapter {
         }
     }
 }
-
-//
-// SLIDES WITH INVERTED COLOR
-//
-
-@mixin invert-text-color() {
-    footer::before {
-        background-image: url(img/cat-logo-typo-text-weiss.svg);
-    }
-    p,
-    h2,
-    h3 {
-        color: $cat-text-color-invert;
-    }
-    h1 strong {
-        border-radius: 5px;
-        background-color: rgba($cat-bg-color, .2);
-        padding-inline: 20px;
-    }
-    h2 strong {
-        background-color: rgba($cat-darkgray, .1);
-        border-radius: 5px;
-        color: $cat-text-color-invert;
-        padding-inline: 20px;
-    }
-    h3 strong {
-        color: $cat-text-color-invert;
-    }
-    & {
-        --h1-color: #{$cat-text-color-invert};
-        --header-footer-color: #{$cat-text-color-invert};
-        --heading-strong-color: #{$cat-text-color-invert};
-        --paginate-color: #{$cat-text-color-invert};
-    }
-}
-
-@mixin invert-footer-header-color() {
-    footer::before {
-        background-image: url(img/cat-logo-typo-text-weiss.svg);
-    }
-    & {
-        --h1-color: #{$cat-text-color-invert};
-        --header-footer-color: #{$cat-text-color-invert};
-        --heading-strong-color: #{$cat-text-color-invert};
-        --paginate-color: #{$cat-text-color-invert};
-    }
-}
-
-// these slides always have white text
-
-section.chapter,
-section.title {
-    @include invert-text-color()
-}
-
-// these slides can optionally have white text in header/footer (e.g. with a dark bg image)
-
-section.title-02--white-text {
-    @include invert-footer-header-color()
-}
-
-//
-// SLIDE SPECIFIC STYLES
-//
 
 section.title,
 section.chapter {
@@ -236,14 +183,8 @@ section.textbox {
 }
 
 section.chapter {
-    h1, h2,h3 {
+    h1,h2,h3 {
         text-align: center;
-    }
-    h2 strong {
-        background-color: rgba($cat-bg-color, .2);
-        border-radius: 5px;
-        color: $cat-text-color-invert;
-        padding-inline: 20px;
     }
 }
 
