--- a/themes/cat-theme-dark.css
+++ b/themes/cat-theme-dark.css
@@ -4,12 +4,13 @@
 @font-face {
   font-family: "Nunito Sans";
   src: url(fonts/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf);
-  font-weight: 200;
+  font-weight: 200 900;
 }
 :root {
   color: #ffffff;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 200;
+  font-size: 25px;
 }
 
 section {
@@ -23,7 +24,11 @@ section {
 
 h1, h2, h3, h4, h5, p {
   font-weight: 200;
-  animation: fade-in 0.5s forwards;
+  animation: fade-in 0.9s forwards;
+}
+
+h1, h2, h3 {
+  font-weight: 900;
 }
 
 h1 {
@@ -40,8 +45,8 @@ h3 {
 
 h1 strong, h2 strong, h3 strong {
   background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
   color: #ffffff;
+  font-weight: 200;
   padding-inline: 20px;
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
@@ -55,13 +60,28 @@ h2 strong {
   line-height: 2.65rem;
 }
 
-h3 strong,
+h2 strong,
 section.chapter h2 strong {
   background-color: #009bea;
 }
 
+h3 strong,
 section.chapter h3 strong {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* links */
+a {
+  background-color: #009bea;
+  color: #ffffff;
+  text-decoration: none;
+  padding-inline: 10px;
+}
+a:hover {
+  display: inline-block;
+  transform: scale(1.03);
+  transition: all ease-in 300ms;
+  text-decoration: none;
 }
 
 header {
@@ -104,19 +124,36 @@ section::after {
     opacity: 1;
   }
 }
-section.title h1, section.title h2, section.title--white-text h1, section.title--white-text h2 {
+section.title h1, section.title h2, section.title h3, section.title--white-text h1, section.title--white-text h2, section.title--white-text h3 {
   text-align: center;
 }
 
-section.title h1 + h2, section.title--white-text h1 + h2,
+section.title h1 + h2,
+section.title h1 + h3,
+section.title h2 + h3, section.title--white-text h1 + h2,
+section.title--white-text h1 + h3,
+section.title--white-text h2 + h3,
 section.chapter h1 + h2,
-section.chapter--white-text h1 + h2 {
+section.chapter h1 + h3,
+section.chapter h2 + h3,
+section.chapter--white-text h1 + h2,
+section.chapter--white-text h1 + h3,
+section.chapter--white-text h2 + h3 {
   margin-top: -30px;
 }
-section.title h2 + h1, section.title--white-text h2 + h1,
+section.title h2 + h1,
+section.title h3 + h1, section.title--white-text h2 + h1,
+section.title--white-text h3 + h1,
 section.chapter h2 + h1,
-section.chapter--white-text h2 + h1 {
-  margin-top: -30px;
+section.chapter h3 + h1,
+section.chapter--white-text h2 + h1,
+section.chapter--white-text h3 + h1 {
+  margin-top: -39px;
+}
+
+section.title h3 + h2,
+section.chapter h3 + h2 {
+  margin-top: -19px;
 }
 
 section.title header,
@@ -130,7 +167,8 @@ section.title {
 }
 
 section.chapter,
-section.textbox {
+section.textbox,
+section.page-bg {
   background-image: url(img/chapter-bg-dark.png);
   background-size: cover;
 }
