new bg files cate/cat gradients and solid colors

--- a/themes/cat-theme-dark.scss
+++ b/themes/cat-theme-dark.scss
@@ -204,14 +204,14 @@ section.chapter {
 }
 
 section.title {
-    background-image: url(img/title-bg-gradient.png);
+    background-image: url(img/bg-cat-gradient.png);
     background-size: cover;
 }
 
 section.chapter,
 section.textbox,
 section.page-bg {
-    background-image: url(img/chapter-bg-dark.png);
+    background-image: url(img/bg-cat-gray.png);
     background-size: cover;
 }
 
