--- a/themes/cat-theme-dark.scss
+++ b/themes/cat-theme-dark.scss
@@ -117,7 +117,8 @@ footer {
     justify-content: space-between;
 }
 
-footer::before {
+footer::before,
+footer::after {
     content: " ";
     background-image: url(img/cat-logo-typo-text-weiss.svg);
     background-size: contain;
@@ -125,6 +126,11 @@ footer::before {
     opacity: .5;
     width: math.div(list.nth($logo-size, 1), 2);
     height: math.div(list.nth($logo-size, 2), 2);
+}
+
+footer::after {
+    background-image: url(img/cate-logo-weiss.svg);
+    width: 90px;
 }
 
 // pagination
